--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,7 +1,7 @@
 body {
-    color: 333;
+    color: red;
     text-align: left;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: ar;
     font-size: 16px;
     margin: 0;
     padding: 0;
